# Dokyumento

./: README.md  dokyumento.py  license  pyproject.toml  setup.py
dokyumento/: __init__.py  __main__.py
dokyumento/languages/: __init__.py  base_parser.py  c_cpp_parser.py  rust_parser.py  swift_parser.py  typescript_parser.py
languages/: __init__.py  base_parser.py  go_parser.py  javascript_parser.py  python_parser.py
